fixes wrapping text inside the subscribe button in DE language

--- a/wp-content/themes/classy/sass/_forms.scss
+++ b/wp-content/themes/classy/sass/_forms.scss
@@ -167,7 +167,7 @@ button, input[type=button] {
     .button {
 
         &--account {
-            padding: 8px 30px;
+            padding: 8px 15px;
         }
 
         &:hover, &:focus {
